# K-AR_HYU_Deform_Simulation

./: .gitignore  .gitmodules  .gitvconfig  README.md
src/: CMakeLists.txt  Concat.cpp  Concat.h  Delaunay.cpp  Delaunay.h  FltkALL.h  FltkOpenGLrenderer.cpp  FltkOpenGLrenderer.h  IKSolver.cpp  IKSolver.h  INativeRender.cpp  INativeRender.h  IguanaIKSolver.h  Makefile  MeshTools.cpp  MeshTools.h  Mesh_old.cpp  Mesh_old.h  MotionUtilTwo.cpp  MotionUtilTwo.h  Multipole.cpp  Multipole.h  MyScriptWin.cpp  MyScriptWin.h  OgreFltk.cpp  OgreFltk.h  OpenGLNativeRenderSystem.hpp  OperatorSignal.cpp  OperatorSignal.h  README.wiki  RigidBodyWin.cpp  RigidBodyWin.h  SoftBodyLCP.cpp  SoftBodyLCP.h  SoftDemoWin.h  SpringEditWin.cpp  SpringEditWin.h  Stitch.cpp  Stitch.h  SurfaceControl.cpp  (+21 more)
src/BulletDynamics_unused/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake
src/BulletDynamics_unused/ConstraintSolver/: btGeneric6DofConstraint.cpp  btGeneric6DofConstraint.h  btOdeTypedJoint.h
src/BulletSoftBody_unused/: Makefile  btDbvt.h  btSoftBody.cpp  btSoftBody.h  btSoftBody2.cpp  btSoftBody2.h  btSoftBody2Helpers.cpp  btSoftBody2Helpers.h  btSoftBodyHelpers.h  btSoftBodyRigidBodyCollisionConfiguration.cpp  btSoftBodyRigidBodyCollisionConfiguration.h  btSoftRigidCollisionAlgorithm.cpp  btSoftRigidDynamicsWorld.cpp  btSoftRigidDynamicsWorld.h  btSoftRigidDynamicsWorld2.cpp  btSoftRigidDynamicsWorld2.h  btSoftSoftCollisionAlgorithm.cpp  btSoftSoftCollisionAlgorithm.h  btSparseSDF.h  cmake_install.cmake
src/ElasticBody/: AsRigidAsPossible.cpp  AsRigidAsPossible.h  CompareHelper.cpp  CompareHelper.h  DeformableBody.cpp  DeformableBody.h  EmbeddedSurface.cpp  EmbeddedSurface.h  HarmonicCoord.cpp  MeanValueWeights.cpp  MeanValueWeights.h  ModelingWin.cpp  ModelingWin.h  TetraDeformTestWin.cpp  TetraMesh.cpp  TetraMesh.h  TetraMeshEditWin.cpp  Tool.cpp  Tool.h  UI_mode.cpp  UI_mode.h  sgeom.cpp  sgeom.h
src/ElasticBody/opennl/: CMakeLists.txt
src/ElasticBody/opennl/intern/: Makefile
src/ElasticBody/opennl/superlu/: Makefile  (+1 more)
src/TRL/: DynamicsSimulator_TRL_massSpring.cpp  DynamicsSimulator_TRL_massSpring.h
src/Vision/: CMakeLists.txt  ImagePlane.cpp  ImagePlane.h  ObjModel.cpp  ObjModel.h  SettingLoader.h  SpacePrimitives.cpp  SpacePrimitives.h  TrackerUtils.h  realsense3.cpp  realsense3.h
src/cma/: CMAwrap.cpp  CMAwrap.h  cmaes.c  cmaes_interface.h  compile  example1.c  example2.c  initials.par  plotcmaesdat.m  readme  signals.par
src/fem/: World.cpp  World.h  fem.h
src/fem/Constraint/: Constraint.h  CorotateFEMCst.cpp  CorotateFEMCst.h  Cst.h  LinearMuscleCst.h
src/femworld/: IntegratedWorld.cpp  IntegratedWorld.h
src/iguana_2009/: Makefile  iguana.tex
src/lua/: IguanaFall.lua  IguanaLCP.lua  IguanaLCP2.lua  RagdollFallSimple.lua  flexiblebody.lua  flexiblebodyimplicit.lua  flexiblebodyimplicit_ham.lua  flexiblebodyimplicitlight.lua  flexiblebodyimplicitsimple.lua  iguana.bit  iguanaAll.selection  iguanaTail.selection  iguana_min.bit  leftFoot.selection  leftHand.selection  rightFoot.selection  rightHand.selection  simulate_bunny.lua
src/lua/test/: DTW.lua  Delaunay.lua  IguanaIKSolverLua.lua  cmaes_with_fem.lua  testControlTET_v1.lua  testControlTET_v2.lua  testControlTET_v3.lua  testDelaunay.lua  testFEM.lua  testFEM2.lua  testIguanaIK.lua  testLCP.lua  testPenalty.lua  testSpringGen.lua  testSurfaceControl.lua  testSurfaceControl_cpp.lua  testSurfaceControl_feature.lua  test_tri0.lua
src/makeTet/: csvtoobj.py  nodetotet.py  objmultiply2.py  objtopoly.py  objtoxyz.py  offtoobj.py
src/softbody2/: CMakeLists.txt  DRGShell.h  Physics.h  Physics_Constraint.cpp  Physics_Constraint.h  Physics_Force.cpp  Physics_Force.h  Physics_GravityForce.cpp  Physics_GravityForce.h  Physics_Impulses.cpp  Physics_Impulses.h  Physics_LargeVector.cpp  Physics_LargeVector.h  Physics_Matrix3x3.cpp  Physics_Matrix3x3.h  Physics_ParticleSystem.cpp  Physics_ParticleSystem.h  Physics_ParticleSystem_clean.cpp  Physics_ParticleSystem_working_good.cpp  Physics_SparseSymmetricMatrix.cpp  Physics_SparseSymmetricMatrix.h  Physics_SpringForce.cpp  Physics_SpringForce.h  Physics_SymmetricMatrix.cpp  Physics_SymmetricMatrix.h  Physics_Vector3.cpp  Physics_Vector3.h
src/softbody2/DataIO/: BMPLoader.cpp  BMPLoader.h  DataStream.h  FileStream.cpp  FileStream.h  ImageLoader.cpp  ImageLoader.h
src/softbody2/FrameWork/: DRGMatrix.cpp  DRGMatrix.h  DRGText.cpp  DRGText.h  DRGTexture.cpp  DRGTexture.h  DRGWrapper.cpp  DRGWrapper.h  Errors.cpp
src/softbody2/Objects/: DRGObject.cpp  DRGObject.h  DRGObjectPlane.cpp  DRGObjectPlane.h  DRGShader.cpp  DRGShader.h
src/softbody2/debug/: BuildLog.htm  bulletsoftbody.idb
src/softbody2/release/: BuildLog.htm  bulletsoftbody.idb
src/sparseicp/: ICP.h  ICP_wrap.cpp  ICP_wrap.h
src/taesooLib/BaseLib/: CMakeLists.txt  baselib.cbp  baselib.h  resource.h  stdafx.cpp  stdafx.h
src/taesooLib/ClassificationLib/: CMakeLists.txt  stdafx.cpp  stdafx.h
src/taesooLib/MainLib/: MainLib.cpp  MainLib.h  MainLib.rc  Resource.h  stdafx.cpp  stdafx.h
src/taesooLib/PhysicsLib/: CollisionDetector.cpp  DynamicsSimulator.cpp  DynamicsSimulator.h  DynamicsSimulator_Bullet.cpp  DynamicsSimulator_Bullet.h  DynamicsSimulator_UT.cpp  DynamicsSimulator_penaltyMethod.cpp  DynamicsSimulator_penaltyMethod.h  InertiaCalculator.cpp  InertiaCalculator.h  ModelLoaderUtil_UT.cpp  ModelLoaderUtil_UT.h  OpenHRPcommon.cpp  SDRE.cpp  SDRE.h  ScriptBaseWin.h  Sensor.h  World_UT.h  clapack_wrap.cpp  clapack_wrap.h  physicsLib.cpp  physicsLib.h  psim.h  stdafx.cpp  stdafx.h
src/unused/: FELearning.cpp  FELearning.h  FELearning_luna.cpp  FlexibleBodyImplicitSimpleWin.cpp  FlexibleBodyImplicitSimpleWin.h  FlexibleBodyImplicitWin.cpp  FlexibleBodyImplicitWin.h  FlexibleBodyWin.cpp  FlexibleBodyWin.h  IguanaIKSolver.cpp  IguanaLCPwin.cpp  IguanaLCPwin.h  LCPwin.cpp  LCPwin.h  Ogre_ShapeDrawer.cpp  Ogre_ShapeDrawer.h  PenaltyWin.cpp  PenaltyWin.h  SimulatorImplicit.cpp  SimulatorImplicit.h  SoftDemo.cpp  SoftDemo.h  TRCwin.cpp  TRCwin.h  bulletTools.cpp  retarget.cpp  retarget.h
(+861 files in other folders)
